Alteração do save corrigido